// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Header > should display a trophy icon if current difficulty has been solved 1`] = `
<DocumentFragment>
  <header
    class="flex justify-between border-b px-4"
  >
    <div
      class="flex items-center gap-4"
    >
      <h1
        class="font-(family-name:--title-fonts) text-3xl text-pink-bright py-2 font-extrabold hidden sm:block"
      >
        DOUBLETS
      </h1>
      <p
        class="font-(family-name:--standard-fonts)"
      >
        Easy
      </p>
      <p
        class="font-(family-name:--standard-fonts)"
      >
        0:00
        <span
          class="inline-flex"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-trophy ml-1 fa-xs"
            data-icon="trophy"
            data-prefix="fas"
            role="img"
            style="color: rgb(255, 255, 255);"
            viewBox="0 0 512 512"
          >
            <path
              d="M144.3 0l224 0c26.5 0 48.1 21.8 47.1 48.2-.2 5.3-.4 10.6-.7 15.8l49.6 0c26.1 0 49.1 21.6 47.1 49.8-7.5 103.7-60.5 160.7-118 190.5-15.8 8.2-31.9 14.3-47.2 18.8-20.2 28.6-41.2 43.7-57.9 51.8l0 73.1 64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-192 0c-17.7 0-32-14.3-32-32s14.3-32 32-32l64 0 0-73.1c-16-7.7-35.9-22-55.3-48.3-18.4-4.8-38.4-12.1-57.9-23.1-54.1-30.3-102.9-87.4-109.9-189.9-1.9-28.1 21-49.7 47.1-49.7l49.6 0c-.3-5.2-.5-10.4-.7-15.8-1-26.5 20.6-48.2 47.1-48.2zM101.5 112l-52.4 0c6.2 84.7 45.1 127.1 85.2 149.6-14.4-37.3-26.3-86-32.8-149.6zM380 256.8c40.5-23.8 77.1-66.1 83.3-144.8L411 112c-6.2 60.9-17.4 108.2-31 144.8z"
              fill="currentColor"
            />
          </svg>
        </span>
      </p>
    </div>
    <div
      class="flex justify-between gap-x-2"
    >
      <button
        aria-label="Add Guess"
        class="w-10 min-h-12 sm:w-12 hover:bg-grey-mid active:bg-grey-mid cursor-pointer"
        id="square-plus-overlay-button"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-square-plus fa-xl"
          data-icon="square-plus"
          data-prefix="far"
          role="img"
          style="color: rgb(255, 255, 255);"
          viewBox="0 0 448 512"
        >
          <path
            d="M64 80c-8.8 0-16 7.2-16 16l0 320c0 8.8 7.2 16 16 16l320 0c8.8 0 16-7.2 16-16l0-320c0-8.8-7.2-16-16-16L64 80zM0 96C0 60.7 28.7 32 64 32l320 0c35.3 0 64 28.7 64 64l0 320c0 35.3-28.7 64-64 64L64 480c-35.3 0-64-28.7-64-64L0 96zM200 344l0-64-64 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l64 0 0-64c0-13.3 10.7-24 24-24s24 10.7 24 24l0 64 64 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-64 0 0 64c0 13.3-10.7 24-24 24s-24-10.7-24-24z"
            fill="currentColor"
          />
        </svg>
      </button>
      <button
        aria-label="Remove Guess"
        class="w-10 min-h-12 sm:w-12 hover:bg-grey-mid active:bg-grey-mid cursor-pointer"
        id="square-minus-overlay-button"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-square-minus fa-xl"
          data-icon="square-minus"
          data-prefix="far"
          role="img"
          style="color: rgb(255, 255, 255);"
          viewBox="0 0 448 512"
        >
          <path
            d="M64 80c-8.8 0-16 7.2-16 16l0 320c0 8.8 7.2 16 16 16l320 0c8.8 0 16-7.2 16-16l0-320c0-8.8-7.2-16-16-16L64 80zM0 96C0 60.7 28.7 32 64 32l320 0c35.3 0 64 28.7 64 64l0 320c0 35.3-28.7 64-64 64L64 480c-35.3 0-64-28.7-64-64L0 96zM136 232l176 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-176 0c-13.3 0-24-10.7-24-24s10.7-24 24-24z"
            fill="currentColor"
          />
        </svg>
      </button>
      <button
        aria-label="Select Difficulty"
        class="w-10 min-h-12 sm:w-12 hover:bg-grey-mid active:bg-grey-mid cursor-pointer"
        id="dumbbell-overlay-button"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-dumbbell fa-xl"
          data-icon="dumbbell"
          data-prefix="fas"
          role="img"
          style="color: rgb(255, 255, 255);"
          viewBox="0 0 640 512"
        >
          <path
            d="M96 112c0-26.5 21.5-48 48-48s48 21.5 48 48l0 112 256 0 0-112c0-26.5 21.5-48 48-48s48 21.5 48 48l0 16 16 0c26.5 0 48 21.5 48 48l0 48c17.7 0 32 14.3 32 32s-14.3 32-32 32l0 48c0 26.5-21.5 48-48 48l-16 0 0 16c0 26.5-21.5 48-48 48s-48-21.5-48-48l0-112-256 0 0 112c0 26.5-21.5 48-48 48s-48-21.5-48-48l0-16-16 0c-26.5 0-48-21.5-48-48l0-48c-17.7 0-32-14.3-32-32s14.3-32 32-32l0-48c0-26.5 21.5-48 48-48l16 0 0-16z"
            fill="currentColor"
          />
        </svg>
      </button>
      <button
        aria-label="Stats"
        class="w-10 min-h-12 sm:w-12 hover:bg-grey-mid active:bg-grey-mid cursor-pointer"
        id="chart-simple-overlay-button"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-chart-simple fa-xl"
          data-icon="chart-simple"
          data-prefix="fas"
          role="img"
          style="color: rgb(255, 255, 255);"
          viewBox="0 0 512 512"
        >
          <path
            d="M192 80c0-26.5 21.5-48 48-48l32 0c26.5 0 48 21.5 48 48l0 352c0 26.5-21.5 48-48 48l-32 0c-26.5 0-48-21.5-48-48l0-352zM0 272c0-26.5 21.5-48 48-48l32 0c26.5 0 48 21.5 48 48l0 160c0 26.5-21.5 48-48 48l-32 0c-26.5 0-48-21.5-48-48L0 272zM432 96l32 0c26.5 0 48 21.5 48 48l0 288c0 26.5-21.5 48-48 48l-32 0c-26.5 0-48-21.5-48-48l0-288c0-26.5 21.5-48 48-48z"
            fill="currentColor"
          />
        </svg>
      </button>
      <button
        aria-label="Help"
        class="w-10 min-h-12 sm:w-12 hover:bg-grey-mid active:bg-grey-mid cursor-pointer"
        id="circle-question-overlay-button"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-question fa-xl"
          data-icon="circle-question"
          data-prefix="far"
          role="img"
          style="color: rgb(255, 255, 255);"
          viewBox="0 0 512 512"
        >
          <path
            d="M464 256a208 208 0 1 0 -416 0 208 208 0 1 0 416 0zM0 256a256 256 0 1 1 512 0 256 256 0 1 1 -512 0zm256-80c-17.7 0-32 14.3-32 32 0 13.3-10.7 24-24 24s-24-10.7-24-24c0-44.2 35.8-80 80-80s80 35.8 80 80c0 47.2-36 67.2-56 74.5l0 3.8c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-8.1c0-20.5 14.8-35.2 30.1-40.2 6.4-2.1 13.2-5.5 18.2-10.3 4.3-4.2 7.7-10 7.7-19.6 0-17.7-14.3-32-32-32zM224 368a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </header>
</DocumentFragment>
`;

exports[`Header > should render correctly 1`] = `
<DocumentFragment>
  <header
    class="flex justify-between border-b px-4"
  >
    <div
      class="flex items-center gap-4"
    >
      <h1
        class="font-(family-name:--title-fonts) text-3xl text-pink-bright py-2 font-extrabold hidden sm:block"
      >
        DOUBLETS
      </h1>
      <p
        class="font-(family-name:--standard-fonts)"
      >
        Easy
      </p>
      <p
        class="font-(family-name:--standard-fonts)"
      >
        0:00
        <span
          class="inline-flex"
        />
      </p>
    </div>
    <div
      class="flex justify-between gap-x-2"
    >
      <button
        aria-label="Add Guess"
        class="w-10 min-h-12 sm:w-12 hover:bg-grey-mid active:bg-grey-mid cursor-pointer"
        id="square-plus-overlay-button"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-square-plus fa-xl"
          data-icon="square-plus"
          data-prefix="far"
          role="img"
          style="color: rgb(255, 255, 255);"
          viewBox="0 0 448 512"
        >
          <path
            d="M64 80c-8.8 0-16 7.2-16 16l0 320c0 8.8 7.2 16 16 16l320 0c8.8 0 16-7.2 16-16l0-320c0-8.8-7.2-16-16-16L64 80zM0 96C0 60.7 28.7 32 64 32l320 0c35.3 0 64 28.7 64 64l0 320c0 35.3-28.7 64-64 64L64 480c-35.3 0-64-28.7-64-64L0 96zM200 344l0-64-64 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l64 0 0-64c0-13.3 10.7-24 24-24s24 10.7 24 24l0 64 64 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-64 0 0 64c0 13.3-10.7 24-24 24s-24-10.7-24-24z"
            fill="currentColor"
          />
        </svg>
      </button>
      <button
        aria-label="Remove Guess"
        class="w-10 min-h-12 sm:w-12 hover:bg-grey-mid active:bg-grey-mid cursor-pointer"
        id="square-minus-overlay-button"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-square-minus fa-xl"
          data-icon="square-minus"
          data-prefix="far"
          role="img"
          style="color: rgb(255, 255, 255);"
          viewBox="0 0 448 512"
        >
          <path
            d="M64 80c-8.8 0-16 7.2-16 16l0 320c0 8.8 7.2 16 16 16l320 0c8.8 0 16-7.2 16-16l0-320c0-8.8-7.2-16-16-16L64 80zM0 96C0 60.7 28.7 32 64 32l320 0c35.3 0 64 28.7 64 64l0 320c0 35.3-28.7 64-64 64L64 480c-35.3 0-64-28.7-64-64L0 96zM136 232l176 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-176 0c-13.3 0-24-10.7-24-24s10.7-24 24-24z"
            fill="currentColor"
          />
        </svg>
      </button>
      <button
        aria-label="Select Difficulty"
        class="w-10 min-h-12 sm:w-12 hover:bg-grey-mid active:bg-grey-mid cursor-pointer"
        id="dumbbell-overlay-button"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-dumbbell fa-xl"
          data-icon="dumbbell"
          data-prefix="fas"
          role="img"
          style="color: rgb(255, 255, 255);"
          viewBox="0 0 640 512"
        >
          <path
            d="M96 112c0-26.5 21.5-48 48-48s48 21.5 48 48l0 112 256 0 0-112c0-26.5 21.5-48 48-48s48 21.5 48 48l0 16 16 0c26.5 0 48 21.5 48 48l0 48c17.7 0 32 14.3 32 32s-14.3 32-32 32l0 48c0 26.5-21.5 48-48 48l-16 0 0 16c0 26.5-21.5 48-48 48s-48-21.5-48-48l0-112-256 0 0 112c0 26.5-21.5 48-48 48s-48-21.5-48-48l0-16-16 0c-26.5 0-48-21.5-48-48l0-48c-17.7 0-32-14.3-32-32s14.3-32 32-32l0-48c0-26.5 21.5-48 48-48l16 0 0-16z"
            fill="currentColor"
          />
        </svg>
      </button>
      <button
        aria-label="Stats"
        class="w-10 min-h-12 sm:w-12 hover:bg-grey-mid active:bg-grey-mid cursor-pointer"
        id="chart-simple-overlay-button"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-chart-simple fa-xl"
          data-icon="chart-simple"
          data-prefix="fas"
          role="img"
          style="color: rgb(255, 255, 255);"
          viewBox="0 0 512 512"
        >
          <path
            d="M192 80c0-26.5 21.5-48 48-48l32 0c26.5 0 48 21.5 48 48l0 352c0 26.5-21.5 48-48 48l-32 0c-26.5 0-48-21.5-48-48l0-352zM0 272c0-26.5 21.5-48 48-48l32 0c26.5 0 48 21.5 48 48l0 160c0 26.5-21.5 48-48 48l-32 0c-26.5 0-48-21.5-48-48L0 272zM432 96l32 0c26.5 0 48 21.5 48 48l0 288c0 26.5-21.5 48-48 48l-32 0c-26.5 0-48-21.5-48-48l0-288c0-26.5 21.5-48 48-48z"
            fill="currentColor"
          />
        </svg>
      </button>
      <button
        aria-label="Help"
        class="w-10 min-h-12 sm:w-12 hover:bg-grey-mid active:bg-grey-mid cursor-pointer"
        id="circle-question-overlay-button"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-question fa-xl"
          data-icon="circle-question"
          data-prefix="far"
          role="img"
          style="color: rgb(255, 255, 255);"
          viewBox="0 0 512 512"
        >
          <path
            d="M464 256a208 208 0 1 0 -416 0 208 208 0 1 0 416 0zM0 256a256 256 0 1 1 512 0 256 256 0 1 1 -512 0zm256-80c-17.7 0-32 14.3-32 32 0 13.3-10.7 24-24 24s-24-10.7-24-24c0-44.2 35.8-80 80-80s80 35.8 80 80c0 47.2-36 67.2-56 74.5l0 3.8c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-8.1c0-20.5 14.8-35.2 30.1-40.2 6.4-2.1 13.2-5.5 18.2-10.3 4.3-4.2 7.7-10 7.7-19.6 0-17.7-14.3-32-32-32zM224 368a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </header>
</DocumentFragment>
`;
